--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@ html {
 
 body {
   min-height: 100vh;
-  background-image: url('./assets/background.jpg');
+  background-image: url('https://i.imgur.com/WHsr2w3.jpeg');
   background-position: center;
   background-repeat: repeat;
   background-color: #ff9bac;
@@ -194,7 +194,7 @@ body {
 
 /* Hero Section */
 .hero-section {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/hero-bg.jpg');
+  background-image: linear-gradient(rgba(252, 164, 247, 0.5), rgba(255, 216, 255, 0.5)), url('/hero-bg.jpg');
   background-size: cover;
   background-position: center;
   height: 80vh;
